changes div names

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <main>
       <div class="hero-div">
       <section class="hero-bg">
-        <div "hero-container container">
+        <div class="hero-container">
         <h1>Effective Solutions for Your Business</h1>
         <button class="hero-button">Order Service</button>
       </div>
@@ -77,8 +77,9 @@
             Design practice focused on digital experiences. We bring forth a
             deep passion for problem-solving.
           </p>
+        </div>
         </ul>
-      </div>
+
       </section>
       <section class="team-list">
         <div class="team-list container">
