--- a/index.html
+++ b/index.html
@@ -20,192 +20,192 @@
   <body>
     <header>
       <div class="header-top container">
-      <a class="logo" href="#" target="_self">
-        WEB <span class="logo-span">STUDIO</span></a>
-      <nav class="nav-bar">
-        <ul class="header-ul">
-          <li><a href="#">Studio</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="header-info">
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
-        </ul>
-      </address>
-    </div>
+        <a class="logo" href="#" target="_self">
+          WEB <span class="logo-span">STUDIO</span></a
+        >
+        <nav class="nav-bar">
+          <ul class="header-ul">
+            <li><a href="#">Studio</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="header-info">
+          <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <div class="hero-div">
-      <section class="hero-bg">
-        <div class="hero-container">
-        <h1>Effective Solutions for Your Business</h1>
-        <button class="hero-button">Order Service</button>
+        <section class="hero-bg">
+          <div class="hero-container">
+            <h1>Effective Solutions for Your Business</h1>
+            <button class="hero-button">Order Service</button>
+          </div>
+        </section>
       </div>
-      </section>
-    </div>
       <section>
-        <ul class="first-list">
-          <div class="section-two container">
-          <li>
-            <h3>Strategy</h3>
-            <p>
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3>Punctuality</h3>
-          </li>
-          <p>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </p>
-          <li>
-            <h3>Diligence</h3>
-          </li>
-          <p>
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk.
-          </p>
-          <li>
-            <h3>Technologies</h3>
-          </li>
-          <p>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </p>
+        <div class="section-two container">
+          <ul class="first-list">
+            <li>
+              <h3>Strategy</h3>
+              <p>
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3>Punctuality</h3>
+              <p>
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3>Diligence</h3>
+              <p>
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3>Technologies</h3>
+              <p>
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
         </div>
-        </ul>
-
       </section>
       <section class="team-list">
         <div class="team-list container">
-        <h2>Our Team</h2>
-        <ul>
-          <li class="list-photo">
-            <img
-              src="images/markguerrero.jpg"
-              alt="Mark Guerrero's photo"
-              width="264"
-              height="260"
-            />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
-          </li>
-          <li class="list-photo">
-            <img
-              src="images/tomford.jpg"
-              alt="Tom Ford's photo"
-              width="264"
-              height="260"
-            />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
-          </li>
-          <li class="list-photo">
-            <img
-              src="images/camilagarcia.jpg"
-              alt="Camila Garcia's photo"
-              width="264"
-              height="260"
-            />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
-          </li>
-          <li class="list-photo">
-            <img
-              src="images/danielwilson.jpg"
-              alt="Daniel Wilson's photo"
-              width="264"
-              height="260"
-            />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
-          </li>
-        </ul>
-      </div>
+          <h2>Our Team</h2>
+          <ul>
+            <li class="list-photo">
+              <img
+                src="images/markguerrero.jpg"
+                alt="Mark Guerrero's photo"
+                width="264"
+                height="260"
+              />
+              <h3>Mark Guerrero</h3>
+              <p>Product Designer</p>
+            </li>
+            <li class="list-photo">
+              <img
+                src="images/tomford.jpg"
+                alt="Tom Ford's photo"
+                width="264"
+                height="260"
+              />
+              <h3>Tom Ford</h3>
+              <p>Frontend Developer</p>
+            </li>
+            <li class="list-photo">
+              <img
+                src="images/camilagarcia.jpg"
+                alt="Camila Garcia's photo"
+                width="264"
+                height="260"
+              />
+              <h3>Camila Garcia</h3>
+              <p>Marketing</p>
+            </li>
+            <li class="list-photo">
+              <img
+                src="images/danielwilson.jpg"
+                alt="Daniel Wilson's photo"
+                width="264"
+                height="260"
+              />
+              <h3>Daniel Wilson</h3>
+              <p>UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="portfolio-list">
         <div class="portfolio-list container">
-        <h2>Our Portfolio</h2>
-        <ul>
-          <li>
-            <img
-              src="images/bankingapp.jpg"
-              alt="Banking App Photo"
-              width="360"
-              height="360"
-            />
-            <h3>Banking App</h3>
-            <p>App</p>
-          </li>
-          <li>
-            <img
-              src="images/cashlesspayment.jpg"
-              alt="Cashless Payment Photo"
-              width="360"
-              height="360"
-            />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img
-              src="images/meditationapp.jpg"
-              alt="Meditation App Photo"
-              width="360"
-              height="360"
-            />
-            <h3>Meditation App</h3>
-            <p>App</p>
-          </li>
-          <li>
-            <img
-              src="images/taxiservice.jpg"
-              alt="Taxi Service Photo"
-              width="360"
-              height="360"
-            />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img
-              src="images/screenillustartions.jpg"
-              alt="Screen Illustations Photo"
-              width="360"
-              height="360"
-            />
-            <h3>Screen Illustartions</h3>
-            <p>Design</p>
-          </li>
-          <li>
-            <img
-              src="images/onlinecourses.jpg"
-              alt="Online Courses Photo"
-              width="360"
-              height="360"
-            />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
-          </li>
-        </ul>
-      </div>
+          <h2>Our Portfolio</h2>
+          <ul>
+            <li>
+              <img
+                src="images/bankingapp.jpg"
+                alt="Banking App Photo"
+                width="360"
+                height="360"
+              />
+              <h3>Banking App</h3>
+              <p>App</p>
+            </li>
+            <li>
+              <img
+                src="images/cashlesspayment.jpg"
+                alt="Cashless Payment Photo"
+                width="360"
+                height="360"
+              />
+              <h3>Cashless Payment</h3>
+              <p>Marketing</p>
+            </li>
+            <li>
+              <img
+                src="images/meditationapp.jpg"
+                alt="Meditation App Photo"
+                width="360"
+                height="360"
+              />
+              <h3>Meditation App</h3>
+              <p>App</p>
+            </li>
+            <li>
+              <img
+                src="images/taxiservice.jpg"
+                alt="Taxi Service Photo"
+                width="360"
+                height="360"
+              />
+              <h3>Taxi Service</h3>
+              <p>Marketing</p>
+            </li>
+            <li>
+              <img
+                src="images/screenillustartions.jpg"
+                alt="Screen Illustations Photo"
+                width="360"
+                height="360"
+              />
+              <h3>Screen Illustartions</h3>
+              <p>Design</p>
+            </li>
+            <li>
+              <img
+                src="images/onlinecourses.jpg"
+                alt="Online Courses Photo"
+                width="360"
+                height="360"
+              />
+              <h3>Online Courses</h3>
+              <p>Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
-    <footer class= "footer">
+    <footer class="footer">
       <div class="page-footer container">
-      <a class="logo" href="#" target="_self">
-        WEB <span class="logo-span2">STUDIO</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </div>
+        <a class="logo" href="#" target="_self">
+          WEB <span class="logo-span2">STUDIO</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
