--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
   </head>
   <body>
-    <header>
+    <header class="top-header">
       <div class="header-top container">
         <a class="logo" href="#" target="_self">
           WEB <span class="logo-span">STUDIO</span></a
