fix portfolio position

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       </section>
       <section class="portfolio-list">
         <div class="portfolio-list container">
-          <h2>Our Portfolio</h2>
+            <h2 class="portfolio-title">Our Portfolio</h2>
           <ul>
             <li>
               <img
